tekton/frontend/oc_manifests/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: observai-dashboard
  namespace: observai-pipeline
  labels:
    app: observai-dashboard
spec:
  strategy:
    type: Recreate
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - observai-dashboard
        from:
          kind: ImageStreamTag
          namespace: observai-pipeline
          name: 'observai-dashboard:latest'
  replicas: 1
  selector:
    app: observai-dashboard
  template:
    metadata:
      labels:
        app: observai-dashboard
    spec:
      containers:
        - name: observai-dashboard
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          image: >-
            image-registry.openshift-image-registry.svc:5000/observai-pipeline/observai-dashboard:latest
