tekton/frontend/oc_manifests/olddeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: observai-ui-insecure
  namespace: testing-workspace
  labels:
      app.kubernetes.io/part-of: observai
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - observai-ui-insecure
        from:
          kind: ImageStreamTag
          namespace: testing-workspace
          name: 'observai-ui-insecure:latest'
  replicas: 1
  selector:
      app: observai-ui-insecure
  template:
    metadata:
      labels:
        app: observai-ui-insecure
    spec:
      containers:
        - name: observai-ui-insecure
          image: >-
            image-registry.openshift-image-registry.svc:5000/testing-workspace/observai-ui-insecure
          ports:
            - containerPort: 8080
              protocol: TCP                             
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
