tekton/frontend/oc_manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: observai-dashboard
  namespace: testing-workspace
spec:
  selector:
    app: observai-dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
